# macroscope

./: .gitignore  Cargo.toml  README.md
crates/macroscope/: Cargo.toml  README.md
crates/macroscope-macro/: Cargo.toml  README.md
crates/macroscope-macro/src/: lib.rs
crates/macroscope-utils/: Cargo.toml
crates/macroscope-utils/src/: lib.rs  macros.rs
crates/macroscope/src/: choice.rs  delimited.rs  gensym.rs  impl_prelude.rs  lib.rs  optional.rs  pair.rs  prelude.rs  separated.rs  tail.rs  validate.rs  wrapper.rs
crates/macroscope/src/assertions/: function.rs  mod.rs  traits.rs  utils.rs
crates/macroscope/src/ast/: function.rs  leaf.rs  mod.rs  newtype.rs  signature.rs  traits.rs
crates/macroscope/src/coerce/: compile_error.rs  tokens.rs
crates/macroscope/src/derive_parse/: choice.rs  delimited.rs  mod.rs  optional.rs  pair.rs  separated.rs  tail.rs  validate.rs  wrapper.rs
crates/macroscope/src/error/: assertions.rs  mod.rs
crates/macroscope/src/hygiene/: mod.rs
crates/macroscope/src/parse/: mod.rs
crates/macroscope/src/wrap/: function.rs
crates/oxidate/: Cargo.toml
crates/oxidate-macros/: Cargo.toml
crates/oxidate-macros/src/: lib.rs
crates/oxidate/src/: lib.rs  macros.rs  tokens.rs  traits.rs
crates/oxidate/src/ast/: keyword.rs  mod.rs  span.rs  token.rs
crates/oxidate/src/ast/signature/: mod.rs  qualifiers.rs
crates/oxidate/src/coerce/: compile_error.rs  mod.rs  tokens.rs
crates/oxidate/src/error/: assertions.rs  mod.rs
crates/oxidate/src/lex/: lexer.rs  mod.rs  punctuation.rs  word.rs
crates/oxidate/src/lex/assertions/: mod.rs  string_pattern.rs
crates/oxidate/src/lex/literal/: literal_types.rs  litrs_to_tt.rs  mod.rs  tests.rs
crates/oxidate/src/tests/: keyword.rs  mod.rs
