[package]
name = "macroscope-utils"
description = "An implementation detail of the macroscope library"
version = "0.1.1"
edition = "2018"
license = "ISC OR Apache-2.0"
repository = "https://github.com/ergorusty/macroscope"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-crate = "1.1.0"
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = { version = "1.0.76", features = ["full", "extra-traits", "proc-macro"] }
