[package]
name = "macroscope"
description = "Macroscope makes writing proc macros a breeze"
version = "0.1.1"
edition = "2018"
license = "ISC OR Apache-2.0"
repository = "https://github.com/ergorusty/macroscope"

[dependencies]
macroscope-macro = { version = "0.1.0", path = "../macroscope-macro" }
macroscope-utils = { version = "0.1.0", path = "../macroscope-utils" }
proc-macro-crate = "1.1.0"
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = { version = "1.0.76", features = ["full", "extra-traits"] }
