[package]
name = "macroscope"
description = "Macroscope makes writing proc macros a breeze"
version = "0.1.1"
edition = "2018"
license = "ISC OR Apache-2.0"
repository = "https://github.com/ergorusty/macroscope"

[features]
scratch = []

default = ["scratch"]

[dependencies]
derive-new = "0.5.9"
macroscope-macro = { version = "0.1.0", path = "../macroscope-macro" }
macroscope-utils = { version = "0.1.0", path = "../macroscope-utils" }
proc-macro-crate = "1.1.0"
syn = "1.0.77"
thiserror = "1.0.29"
unicode-xid = "0.2.2"
