[package]
name = "oxidate-macros"
description = "Helper macros for oxidate"
repository = "https://github.com/ergorusty/oxidate"
license = "ISC OR Apache-2.0"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = "1.0.76"
derive-syn-parse = "0.1.5"
proc_macro_roids = "0.7.0"
