[package]
name = "oxidate"
description = "Turns strings into a Rust AST"
repository = "https://github.com/ergorusty/oxidate"
license = "ISC OR Apache-2.0"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.0"
colored = "2.0.0"
derive-new = "0.5.9"
litrs = "0.2.3"
mown = "0.2.1"
pad = "0.1.6"
paste = "1.0.5"
peekmore = "1.0.0"
proc-macro-crate = "1.1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.29"
quote = "1.0.9"
sealed = "0.3.0"
oxidate-macros = { version = "0.1.0", path = "../oxidate-macros" }
thiserror = "1.0.29"
